--- a/index.html
+++ b/index.html
@@ -8,40 +8,37 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body class="theme-carnival">
-  <header class="site-header">
-    <h1>Donation-Only Giveaway Carnival 🎉</h1>
-    <p>Every donation is an entry. Hit the magic donor number, win the prize.</p>
+  <header class="hero">
+    <h1 class="hero-title">Giveaway Carnival 🎉</h1>
+    <p class="hero-subtitle">Donation-only giveaways. Hit the magic donor number, win the prize.</p>
   </header>
 
-  <nav class="main-nav">
-    <a href="app.html">Donate & Enter</a>
-    <a href="suggest.html">Suggest an Item</a>
-    <a href="vote.html">Vote on Next Item</a>
+  <nav class="main-nav glass-nav">
+    <a href="app.html">Enter Giveaway</a>
+    <a href="suggest.html">Suggest Item</a>
+    <a href="vote.html">Vote</a>
     <a href="account.html">My Account</a>
-    <a href="winners.html">Winners Wall</a>
+    <a href="winners.html">Winners</a>
   </nav>
 
-  <main>
-    <section id="rules">
+  <main class="content">
+    <section class="card glass-card">
       <h2>How It Works</h2>
       <ol>
-        <li>Sign in or create an account.</li>
-        <li>Choose a donation tier: $10, $20, $30, $40, or $50.</li>
-        <li>Your donation gets a global donor number.</li>
-        <li>If your number matches a prize’s winner number, you instantly win.</li>
-        <li>All donations go directly to our PayPal to fuel bigger causes and prizes.</li>
+        <li>Pick a donation tier and pay through PayPal.</li>
+        <li>Each donation gets a global donor number.</li>
+        <li>If your number matches a prize’s winner number (10th, 20th, etc.), you win.</li>
       </ol>
     </section>
 
-    <section id="prizes-section">
-      <h2>Current & Upcoming Prizes</h2>
-      <div id="prize-reel" class="prize-reel scrolling">
-        <!-- populated later by JS -->
+    <section class="card glass-card">
+      <h2>Current & Upcoming Prizes 🎁</h2>
+      <div id="prize-reel" class="prize-reel">
+        <!-- Populated by JS from /api/prizes -->
       </div>
     </section>
   </main>
 
-  <div id="winner-banner"></div>
   <div id="confetti-layer"></div>
 
   <script src="js/main.js" type="module"></script>
