Add favicon and Open Graph/Twitter metadata
Added favicon and social media metadata for better sharing.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,21 @@
   <title>Giveaway Carnival</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="icons/givve.png" />
+
+  <!-- Social Preview -->
+  <meta property="og:title" content="Giveaway Carnival" />
+  <meta property="og:description" content="Donation-only giveaways. Hit the magic donor number, win the prize." />
+  <meta property="og:image" content="icons/givve.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://givve.store" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Giveaway Carnival" />
+  <meta name="twitter:description" content="Donation-only giveaways. Hit the magic donor number, win the prize." />
+  <meta name="twitter:image" content="icons/givve.png" />
+
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.webmanifest" />
 
