--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Giveaway Carnival</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Giveaway Carnival 🎉</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="icons/givve.png" />
+  <link rel="icon" type="image/png" href="/icons/givve.png" />
 
   <!-- Social Preview -->
   <meta property="og:title" content="Giveaway Carnival" />
   <meta property="og:description" content="Donation-only giveaways. Hit the magic donor number, win the prize." />
-  <meta property="og:image" content="icons/givve.png" />
+  <meta property="og:image" content="/icons/givve.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://givve.store" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Giveaway Carnival" />
   <meta name="twitter:description" content="Donation-only giveaways. Hit the magic donor number, win the prize." />
-  <meta name="twitter:image" content="icons/givve.png" />
+  <meta name="twitter:image" content="/icons/givve.png" />
 
   <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="manifest" href="/manifest.webmanifest" />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <!-- Global Styles -->
+  <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body class="theme-carnival">
-  <header class="hero">
+
+  <!-- HERO SECTION -->
+  <header class="hero glass-hero">
     <h1 class="hero-title">Giveaway Carnival 🎉</h1>
     <p class="hero-subtitle">
       Donation-only giveaways. Hit the magic donor number, win the prize.
     </p>
   </header>
 
+  <!-- NAVIGATION -->
   <nav class="main-nav glass-nav">
     <a href="app.html">Enter Giveaway</a>
     <a href="suggest.html">Suggest Item</a>
@@ -43,7 +46,10 @@
     <a href="winners.html">Winners</a>
   </nav>
 
+  <!-- MAIN CONTENT -->
   <main class="content">
+
+    <!-- HOW IT WORKS -->
     <section class="card glass-card">
       <h2>How It Works</h2>
       <ol>
@@ -53,16 +59,21 @@
       </ol>
     </section>
 
+    <!-- PRIZE REEL -->
     <section class="card glass-card">
       <h2>Current & Upcoming Prizes 🎁</h2>
       <div id="prize-reel" class="prize-reel">
         <!-- Populated by JS -->
       </div>
     </section>
+
   </main>
 
+  <!-- CONFETTI LAYER -->
   <div id="confetti-layer"></div>
 
-  <script src="js/main.js" type="module"></script>
+  <!-- MAIN JS -->
+  <script src="/js/main.js" type="module"></script>
+
 </body>
 </html>
